[package]
name = "demo-dh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clia-tracing-config = "0.2.7"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
rand = "0.8.5"
rust-embed = "8.0.0"
salvo = { version = "0.65", features = ["anyhow", "logging", "cors", "oapi", "jwt-auth", "rustls", "catch-panic", "cookie", "serve-static", "test"] }
serde = "1.0.188"
serde_yaml = "0.8.26"
thiserror = "1.0.48"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
